# good-music-bot

./: .gitignore  README.md  bot_main.py  main.py  pyproject.toml
Lavalink/: README.md
modules/: admin_commands.py  music.py
scripts/: autostart.sh
src/: bot_main.py  main.py
src/good_music_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modules/: admin_commands.py  favorite_song.py  music.py  permissions.py
src/utils/: db.py  general.py  logger.py  rng.py
utils/: general.py  logger.py  rng.py
