[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "good_music_bot"
version = "2.12.3"
description = "A discord music bot powered by discord.py and Wavelink"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "discord.py >= 2.0.1",
    "python-dotenv",
    "aiosqlite",
    "Wavelink >= 2.2.1",
]