[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "good_music_bot"
version = "2.16.0"
description = "A discord music bot powered by discord.py and Wavelink"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "sqlalchemy",
    "aiosqlite",
    "discord.py >= 2.0.1",
    "Wavelink >= 2.5.1",
]